--- a/Lab2/lpulidoa_Lab2.ipynb
+++ b/Lab2/lpulidoa_Lab2.ipynb
@@ -4195,7 +4195,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**My own example 34 - Pandas analysis on a new dataset**"
+        "**My own example 34 - Pandas analysis on a new dataset: REVISIÓN DE LA DISTRIBUCIÓN DE SIEMBRAS DE ÁRBOLES EN EL MUNICIPIO DE PALMIRAS Y ALREDEDORES EN EL AÑO 2021**:\n Se descargó el archivo csv directamente de la página de datos que se facilitó en celdas anteriores. Los datos son particularmente interesantes pues se provee una lista de las ubicaciones geográficas detalladas de la siembra, pero multiples de estos son erróneos, razón por la cual se hace un filtrado de las ubicaciones geográficas para generar un mapa."
       ],
       "metadata": {
         "id": "vrf4pULz73St"
